--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
     </header>
     <!-- end-header -->
+    <!-- start-main -->
+    <main>
+        <!-- start-title-section -->
+        <section>
+            <h1 class="main-title">Internet deve essere al servizio del "bene pubblico": il <br> manifesto di Tim Berners-Lee</h1>
+
+            <p class="first-insertion">Scritto da <a href="https://www.instagram.com/explore/tags/booleaner/" id="booleaner-link">The Booleaner</a> <br><span id="date">il 10/10/2020</span> </p>
+        </section>
+        <!-- end-title-section -->
+
+
+    </main>
+    <!-- end-main -->
 
     
     
