--- a/index.html
+++ b/index.html
@@ -10,21 +10,37 @@
 
 <body>
     <!-- start-header -->
+
     <header>
         <img src="../img/logo.svg" alt="Logo-pagina" class="logo">
-
-
     </header>
+    
     <!-- end-header -->
+
     <!-- start-main -->
+
     <main>
+
         <!-- start-title-section -->
         <section>
-            <h1 class="main-title">Internet deve essere al servizio del "bene pubblico": il <br> manifesto di Tim Berners-Lee</h1>
 
+            <h1 class="main-title">Internet deve essere al servizio del "bene pubblico": il <br> manifesto di Tim Berners-Lee</h1>
             <p class="first-insertion">Scritto da <a href="https://www.instagram.com/explore/tags/booleaner/" id="booleaner-link">The Booleaner</a> <br><span id="date">il 10/10/2020</span> </p>
+
         </section>
         <!-- end-title-section -->
+
+        <!-- start-img-section -->
+
+        <section>
+
+            <img src="img/tim-1.jpg" alt="Tim1" class="tim-img">
+            <img src="img/tim-2.jpg" alt="Tim2" class="tim-img">
+            <p class="img-insertion">1st Photo: John S. and James L. Knight Foundetion, by Scott Henrichsen <br>2nd Photo: Wikimedia, by Paul Clarke</p>
+
+        </section>
+
+        <!-- end-img-section -->
 
 
     </main>
